# head-first-design-patterns-in-python

./: LICENSE  Makefile  README.md  pyproject.toml
src/01_strategy/: base.py  concrete.py  main.py
